# dash_showcase

./: .flaskenv  .gcloudignore  .gitignore  README.md  app-production.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
data/: filters.json  reports.json
src/dash_mcp_showcase/: __init__.py  init_app.py  processing_agent.py
src/dash_mcp_showcase/assets/: styling.css
tests/: test_processing_agent.py
